Fix test failures with Java 17 + Gradle 7.6
Prior to version 7.5, Gradle added some `--add-opens` flags,
that hid potential issues with tests, for Java 16+.

https://github.com/gradle/gradle/pull/20999